cluster/manifests/translator/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: translator
  labels:
    name: translator
    pod-security.kubernetes.io/enforce: restricted
