cluster/manifests/translator/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: translator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: translator
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
