cluster/manifests/translator/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: translator-mc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: translator
      app.kubernetes.io/component: mc
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - captureMode: DEFAULT
    hosts:
    - ./translator-minio.translator.svc.cluster.local
    - istio-system/istiod.istio-system.svc.cluster.local
    - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: translator
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: translator
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./api.openai.com
        - ./openaipublic.blob.core.windows.net
        - ./slack.com
        - ./www.slack.com
        - ./wss-primary.slack.com
        - ./translator-redis-haproxy-reader.translator.svc.cluster.local
        - ./translator-redis-haproxy-writer.translator.svc.cluster.local
        - ./translator-minio.translator.svc.cluster.local
        - url-shortener/url-shortener.url-shortener.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
