cluster/manifests/translator/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: translator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: translator
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: translator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: slack-bolt-proxy
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: translator-redis-haproxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: translator
      app.kubernetes.io/component: redis-haproxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: translator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: translator
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 6380
        - protocol: TCP
          port: 6381
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: translator-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: translator
      app.kubernetes.io/component: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: translator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: translator
              app.kubernetes.io/component: ""
        - namespaceSelector:
            matchLabels:
              name: translator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: translator
              app.kubernetes.io/component: mc
      ports:
        - protocol: TCP
          port: 9000
